--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^5.0.7",
     "react-timer-machine": "^1.0.1",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yarn": "^1.7.0"
   }
 }
