--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-timer-machine": "^1.0.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "twix": "^1.2.1",
     "yarn": "^1.7.0"
   }
 }
