--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,10 @@
   "presets": ["babel-preset-expo"],
   "env": {
     "development": {
-      "plugins": ["transform-react-jsx-source"]
+      "plugins": [
+        ["relay", { "schema": "schema/schema.graphql" }],
+        "transform-react-jsx-source"
+      ]
     }
   }
 }
