--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-plugin-relay": "^1.6.0",
+    "graphql": "^0.13.2",
     "jest": "^23.0.0-charlie.4",
     "jest-expo": "~27.0.0",
     "react-native-scripts": "1.14.0",
-    "react-test-renderer": "16.4.1"
+    "react-test-renderer": "16.4.1",
+    "relay-compiler": "^1.6.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -14,7 +17,8 @@
     "eject": "react-native-scripts eject",
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
-    "test": "jest"
+    "test": "jest",
+    "relay": "relay-compiler --src ./ --schema ./schema/schema.graphql --extensions=js --extensions=jsx"
   },
   "jest": {
     "preset": "jest-expo"
@@ -23,12 +27,15 @@
     "expo": "^27.0.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
-    "react": "16.4.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-native": "~0.55.2",
     "react-native-elements": "^0.19.1",
     "react-native-hideable-view": "github:osagie/react-native-hideable-view",
     "react-navigation": "^2.5.5",
+    "react-relay": "^1.6.0",
     "react-timer-machine": "^1.0.1",
+    "relay-commit-mutation-promise": "^1.0.1",
     "twix": "^1.2.1",
     "yarn": "^1.7.0"
   }
