--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "~0.55.2",
     "react-native-elements": "^0.19.1",
     "react-native-hideable-view": "github:osagie/react-native-hideable-view",
+    "react-native-sync-localstorage": "0.0.3",
     "react-navigation": "^2.5.5",
     "react-relay": "^1.6.0",
     "react-timer-machine": "^1.0.1",
