Change password and fix slider text.

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-native": "~0.55.2",
     "react-native-elements": "^0.19.1",
     "react-native-hideable-view": "github:osagie/react-native-hideable-view",
-    "react-native-settings-list": "^1.8.0",
+    "react-native-settings-list": "github:dblock/react-native-settings-list#text-input-props",
     "react-native-slider": "^0.11.0",
     "react-native-sync-localstorage": "0.0.3",
     "react-navigation": "^2.5.5",
