--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "buffer": "^5.1.0",
     "expo": "^27.0.1",
+    "humanize-duration": "^3.15.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
     "react": "^16.4.1",
