--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "buffer": "^5.1.0",
+    "email-validator": "^2.0.4",
     "expo": "^27.0.1",
     "humanize-duration": "^3.15.1",
     "moment": "^2.22.2",
