--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-native": "~0.55.2",
+    "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-hideable-view": "github:osagie/react-native-hideable-view",
     "react-native-settings-list": "github:dblock/react-native-settings-list#text-input-props",
