Upgraded expo to 28.0.0.

--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
   "dependencies": {
     "buffer": "^5.1.0",
     "email-validator": "^2.0.4",
-    "expo": "^27.0.1",
+    "expo": "^28.0.0",
     "humanize-duration": "^3.15.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-native": "~0.55.2",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-hideable-view": "github:osagie/react-native-hideable-view",
