--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react-native-check-box": "^2.1.0",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-settings-list": "github:dblock/react-native-settings-list#text-input-props",
