--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
-  "presets": ["babel-preset-expo", "react-native-dotenv"],
+  "presets": ["babel-preset-expo", "module:react-native-dotenv"],
   "plugins": ["relay"],
   "env": {
     "development": {
       "plugins": [
-        "transform-react-jsx-source"
+        "@babel/transform-react-jsx-source"
       ]
     }
   }
