--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "babel-plugin-relay": "^1.6.0",
     "graphql": "^0.13.2",
     "jest": "^23.0.0-charlie.4",
-    "jest-expo": "~27.0.0",
+    "jest-expo": "^31.0.0",
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.4.1",
-    "relay-compiler": "^1.6.0"
+    "relay-compiler": "^1.6.0",
+    "schedule": "^0.4.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -26,20 +27,20 @@
   "dependencies": {
     "buffer": "^5.1.0",
     "email-validator": "^2.0.4",
-    "expo": "^28.0.0",
+    "expo": "^31.0.4",
     "humanize-duration": "^3.15.1",
     "moment": "^2.22.2",
     "moment-duration-format": "^2.2.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
+    "react": "^16.5.0",
+    "react-dom": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
     "react-native-check-box": "^2.1.0",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^0.19.1",
     "react-native-settings-list": "github:dblock/react-native-settings-list#text-input-props",
     "react-native-slider": "^0.11.0",
     "react-native-sync-localstorage": "0.0.3",
-    "react-navigation": "^2.5.5",
+    "react-navigation": "^2.18.2",
     "react-navigation-props-mapper": "^0.3.0",
     "react-relay": "^1.6.0",
     "relay-commit-mutation-promise": "^1.0.1",
