--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-check-box": "^2.1.0",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^0.19.1",
+    "react-native-modal-datetime-picker": "^6.0.0",
     "react-native-settings-list": "github:dblock/react-native-settings-list#text-input-props",
     "react-native-slider": "^0.11.0",
     "react-native-sync-localstorage": "0.0.3",
